DevOps/Bernstein/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-database
  template:
    metadata:
      labels:
        app: postgres-database
    spec:
      restartPolicy: Always
      containers:
      - name: postgres-database
        image: postgres:12
        ports:
        - containerPort: 5432
        volumeMounts:
        - name : postgres-database-volume
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-database-volume
          persistentVolumeClaim:
            claimName: postgres-database-pv-claim
