DevOps/Bernstein/traefik.deployment.yaml
---
    apiVersion: v1
    kind: ServiceAccount
    metadata:
      name: traefik-ingress-controller
      namespace: kube-public
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: traefik-ingress-controller
    namespace: kube-public
    labels:
        k8s-app: traefik-ingress-lb
spec:
    replicas: 2
    selector:
        matchLabels:
            name: traefik-ingress-lb
    template:
        metadata:
            labels:
                name: traefik-ingress-lb
        spec:
            serviceAccountName: traefik-ingress-controller
            terminationGracePeriodSeconds: 60
            containers:
            - image: traefik:v1.7
              name: traefik
              ports:
                - name: http
                  containerPort: 80
                - name: admin
                  containerPort: 8080
              args:
                - --api
                - --kubernetes
                - --logLevel=INFO
            restartPolicy: Always
