DevOps/Bernstein/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-database-service
  namespace: default
spec:
  type: ClusterIP
  ports:
     - port: 5432
       targetPort: 5432
  selector:
    app: postgres-database
