DevOps/Bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
spec:
  type: ClusterIP
  ports:
     - port: 80
       targetPort: 80
  selector:
    app: result
